<resources>
    <string name="app_name">SafeTouch</string>
    <string name="db_name">SafeTouchDB</string>
    <string name="home">Home</string>
    <string name="emergency_contacts">Contacts</string>
    <string name="settings">Settings</string>
    <string name="escort_mode">Escort Mode</string>
    <string name="location">Location</string>
    <string name="send_emergency_text">Send Emergency Text</string>
    <string name="send_false_alarm">Send False Alarm</string>
    <string name="personal_mode">Personal Mode</string>

    <string name="general">General</string>
    <string name="switch_alarm">Activate alarm</string>
    <string name="alarm_summary">This will turn the alarm on the device on or off</string>
    <string name="switch_button">Activate button</string>
    <string name="button_summary">This will turn the button on the device on or off</string>
    <string name="escort">Escort Mode</string>
    <string name="escort_summary">Turn Escort Mode on or off</string>
    <string name="preset_msg_title">Preset message</string>
    <string name="preset_msg_summary">This message will be sent to your contacts when there is an emergency</string>
    <string name="preset_msg_dialog">Please enter text message</string>
    <string name="pin_title">PIN</string>
    <string name="pin_summary">Select a pin to be able to disable Escort Mode</string>
    <string name="pin_dialog">Please enter PIN</string>
    <string name="selected_mode">Change mode</string>
    <string name="change_mode">Selected mode</string>
    <string name="mode_summary">Click to see mode</string>
    <string name="change_mode_dialog">Please select a mode</string>
    <string name="safetouch_logo">SafeTouch Logo</string>
    <string name="check_in">Check In</string>
    <string name="parent_mode">Parent Mode</string>
    <string name="medical_mode">Medical Mode</string>
    <string name="notification_test">Notification Test</string>
</resources>
