<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" android:key="all">
    <PreferenceCategory
        android:title="@string/general">
        <SwitchPreference
            android:key="alarm"
            android:title="@string/switch_alarm"
            android:defaultValue="false"
            android:summary="@string/alarm_summary"/>

        <SwitchPreference
            android:key="button"
            android:title="@string/switch_button"
            android:defaultValue="false"
            android:summary="@string/button_summary"/>

        <SwitchPreference
            android:key="escort"
            android:title="@string/escort"
            android:defaultValue="false"
            android:summary="@string/escort_summary"/>

        <EditTextPreference
            android:key="preset_msg"
            android:title="@string/preset_msg_title"
            android:summary="@string/preset_msg_summary"
            android:dialogTitle="@string/preset_msg_dialog"
            />

        <EditTextPreference
            android:key="pin"
            android:title="@string/pin_title"
            android:summary="@string/pin_summary"
            android:dialogTitle="@string/pin_dialog"
            android:inputType="numberDecimal"
            android:digits="0123456789"
            />

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/selected_mode">
        <ListPreference
            android:key="mode_list"
            android:title="@string/change_mode"
            android:summary="%s"
            android:entries="@array/three_modes_list"
            android:entryValues="@array/entryvalues_list_preference"
            android:dialogTitle="@string/change_mode_dialog"
            />

    </PreferenceCategory>

</PreferenceScreen>