<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/home"
        android:icon="@drawable/ic_home_white_24dp"
        android:title="@string/home"
        app:showAsAction="always">

    </item>
    <item
        android:id="@+id/emergency_contacts"
        android:icon="@drawable/ic_people_white_24dp"
        android:title="@string/emergency_contacts"
        app:showAsAction="always">

    </item>
    <item
        android:id="@+id/action_settings"
        android:icon="@drawable/ic_settings_white_24dp"
        android:title="@string/settings"
        app:showAsAction="always">

    </item>

</menu>
