<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.safetouch.activity.MainActivity">

    <!--Text Title-->
    <TextView
        android:id="@+id/mode_title"
        android:layout_width="wrap_content"
        android:layout_height="28dp"
        android:layout_marginBottom="156dp"
        android:layout_marginEnd="110dp"
        android:layout_marginStart="110dp"
        android:text="@string/personal_mode"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textAppearance="@android:style/TextAppearance.Large"
        android:textStyle="bold"
        android:typeface="serif"
        app:layout_constraintBottom_toTopOf="@+id/send_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent" />

    <!--Person Icon-->
    <ImageView
        android:id="@+id/imageView"
        android:layout_width="130dp"
        android:layout_height="126dp"
        android:layout_marginBottom="44dp"
        android:layout_marginStart="124dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toTopOf="@+id/send_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mode_title"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/ic_person_black_48dp" />

    <!--Send SMS Button-->
    <Button
        android:id="@+id/send_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="sendSMSEmergencyText"
        android:text="@string/send_sms"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.431" />

    <!--Location Button-->
    <Button
        android:id="@+id/send_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="146dp"
        android:layout_marginStart="146dp"
        android:layout_marginTop="24dp"
        android:text="@string/location"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/send_text" />

    <!--Escort Mode Button-->
    <Button
        android:id="@+id/escort_mode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="132dp"
        android:layout_marginStart="134dp"
        android:layout_marginTop="12dp"
        android:text="@string/escort_mode"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/send_location" />

</android.support.constraint.ConstraintLayout>
